--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Click==7.0
 Flask==1.1.1
 gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==0.15.6
+pandas==0.25.0
+requests==2.22.0
+scikit-learn==0.21.2
+scipy==1.3.1
