--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask==1.1.1
-gunicorn==19.9.0
-pandas==0.25.0
-requests==2.22.0
-scikit-learn==0.21.2
-scipy==1.3.1
-numpy==1.19.2
+Flask==1.1.0
+gunicorn==19.6.0	
+pandas==0.22.0
+numpy==1.11.2
+scipy==0.18.1
+scikit-learn>=0.18
